# AWS-Automation

automate_test_services/: helpers.py  lambda_handler.py  pyproject.toml  services.py
aws_config_alerts/: README.md  access_key_rotation_master.yaml  access_key_rotation_target.yaml
